--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,6 +1,10 @@
 .theme-default-content code
   color: #d63200
 
-.custom-block.details summary
-  font-weight: 500
-  font-size: 1.1rem
+.custom-block.details 
+  summary
+    font-weight: 500
+    font-size: 1.1rem
+  blockquote
+    color: #2c3e50
+    margin-bottom: 0.1rem
