--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -13,3 +13,13 @@ blockquote > p
 .page li
   margin-bottom: .5rem
 
+
+index-motto-size = 32px
+.index-motto
+  font-size: index-motto-size
+  line-height: index-motto-size
+  font-family: cursive
+  font-weight: bold
+  margin: index-motto-size 0
+  width: 100%
+  text-align: center
