--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,20 +1,25 @@
+@media (min-width: 1025px)
+  .theme-default-content.content__default, page-edit, page-nav
+    min-width: 50rem
+    max-width: 58vw
+
 .theme-default-content code
   color: #d63200
 
-.custom-block.details 
+.custom-block.details
   summary
     font-weight: 500
     font-size: 1.1rem
+
   blockquote
     color: #2c3e50
     margin-bottom: 0.1rem
 
-blockquote > p
-.page li
-  margin-bottom: .5rem
-
+blockquote > p, .page li
+  margin-bottom: 0.5rem
 
 index-motto-size = 32px
+
 .index-motto
   font-size: index-motto-size
   line-height: index-motto-size
