--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -2,6 +2,8 @@
   .theme-default-content.content__default, page-edit, page-nav
     min-width: 50rem
     max-width: 58vw
+  ul, ol
+    line-height: 2
 
 .theme-default-content code
   color: #d63200
@@ -16,9 +18,9 @@
     margin-bottom: 0.1rem
 
 blockquote > p, .page li
-  margin-bottom: 0.5rem
+  margin-bottom: 0.3rem
 
-index-motto-size = 32px
+index-motto-size = 2rem
 
 .index-motto
   font-size: index-motto-size
