--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -2,6 +2,7 @@
   .theme-default-content.content__default, page-edit, page-nav
     min-width: 50rem
     max-width: 58vw
+
   ul, ol
     line-height: 2
 
@@ -22,7 +23,7 @@ blockquote > p, .page li
 
 index-motto-size = 2rem
 
-.index-motto
+.index-motto-yangming, .index-motto-jobs
   font-size: index-motto-size
   line-height: index-motto-size
   font-family: cursive
@@ -30,3 +31,10 @@ index-motto-size = 2rem
   margin: index-motto-size 0
   width: 100%
   text-align: center
+  background: linear-gradient(#70D6FF, #00072D)
+  -webkit-text-fill-color: transparent
+  -webkit-background-clip: text
+
+.index-motto-jobs
+  margin-top: -12px
+  font-size: 24px
