style: support todo-list rendering

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -38,3 +38,9 @@ index-motto-size = 2rem
 .index-motto-jobs
   margin-top: -12px
   font-size: 24px
+
+
+ul.contains-task-list
+  padding-left: 0
+.task-list-item::marker
+  content: ''
