--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -5,7 +5,12 @@
 
   ul, ol
     line-height: 2
+  h4
+    font-size: 1.2rem
+  h4+p
+    line-height: 1.5
 
+    
 .theme-default-content code
   color: #d63200
 
